--- a/Dev/db/README
+++ b/Dev/db/README
@@ -1,8 +1,9 @@
-- Для запуска асинхронного
+**Запуск скрипта:**
+- Для запуска асинхронного:
 ```bash
 python hw.py
 ```
-- Для запуска синхронного
+- Для запуска синхронного:
 ```bash
 python hw.py sync
 ```
